--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <title>The Fashion Pet</title>
 </head>
@@ -21,8 +22,47 @@
         </nav>
     </header>
 
-    <main>
+    <main class="container">
         <h2>Welcome to the Fashion pet</h2>
+        <div class="form-container">
+            <div class="mb-3">
+                <label class="form-label">Name:</label>
+                <input type="text" placeholder=" Enter pet's name" id="txtName">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Age:</label>
+                <input type="number" placeholder="Add the pet's age" id="txtAge">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Gender</label>
+                <input type="text" placeholder="Enter pets gender" id="txtGender">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Breed:</label>
+                <input type="text" placeholder="Add the pet's breed" id="txtBreed">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Service</label>
+                <select class="form-select"
+                id="selService">
+                    <option value="nails cut">Nails cut</option>
+                    <option value="grooming">Grooming</option>
+                    <option value="vaccines">Vaccines</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Owner's Name:</label>
+                <input type="text" placeholder="Owners name" id="txtOwner">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Contact Number:</label>
+                <input type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" id="txtPhone"> 
+            </div>    
+
+
+        <div class="mb-3">
+            <button class="btn btn-primary" onclick="register();">Register</button>
+        </div>
         <!-- registration form 
         name, age, gender, breed,service,owner,phone-->
     </main>
