--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <header>
         <h1>The Fashion Pet</h1>
 
-        <nav>
+        <nav class="menu">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="services.html">Services</a>
@@ -22,14 +22,14 @@
     </header>
 
     <main>
-        <h2>Welcome to the Fashion pet</h2>
-        <!-- adding the information about me-->
+        <h2>About Us</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet explicabo placeat laudantium nam voluptatibus provident esse dicta similique, sit architecto perspiciatis beatae enim alias accusamus minus obcaecati libero cumque facilis.</p>
     </main>
 
     <footer>
+        <h5>1725 Slough Avenue Tucson,Az 85756</h5>
 
     </footer>
     
-    <script src="scripts/practice.js"></script>
 </body>
 </html>
